src/objects/TR1__AreaCode__c.object
<CustomObject>
    <fields>
        <fullName>TR1__Code__c</fullName>
        <label>Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Country__c</fullName>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>US</fullName>
                </value>
                <value>
                    <fullName>UK</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TR1__StateArea__c</fullName>
        <label>State/Area</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Area Code</label>
    <nameField>
        <displayFormat>AC-{000000}</displayFormat>
        <label>Area Code Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Area Codes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>